fix docs and scheduler
