# api-gateway/docs/swagger.json
@@ -419,7 +419,7 @@
             }
         },
         "/schedule/info": {
-            "post": {
+            "get": {
                 "security": [
                     {
                         "ApiKeyAuth": []
@@ -438,13 +438,10 @@
                 "summary": "get info about number on tracking",
                 "parameters": [
                     {
-                        "description": "info",
-                        "name": "input",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/schedule_tracking.GetInfoAboutTrackRequest"
-                        }
+                        "type": "string",
+                        "description": "bill number or container number",
+                        "name": "number",
+                        "in": "query"
                     }
                 ],
                 "responses": {
@@ -1021,14 +1018,6 @@
                     "items": {
                         "type": "string"
                     }
-                }
-            }
-        },
-        "schedule_tracking.GetInfoAboutTrackRequest": {
-            "type": "object",
-            "properties": {
-                "number": {
-                    "type": "string"
                 }
             }
         },
